<resources>
    <string name="app_name">HKScholarHub</string>
    <string name="button">Button</string>
    <string name="SignIn">SIGN IN</string>
    <string name="Sign">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Password">Password</string>
    <string name="account">Sign in to your Registered Phinma Account</string>
    <string name="logo_desc">Logo of the App</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="splash_background" />
    <string name="KAYAMONAMANPALA">KAYAMONAMANPALA</string>
    <string name="HiScholars">Hi, Scholars!</string>
    <string name="profile_icon" />
    <string name="_75_hours_completed">75 Hours\nCompleted</string>
    <string name="_15_hours_npending">15 Hours\nPending</string>
    <string name="check_out_your_schedules_now">Check out your\nSchedules now!</string>
    <string name="hklogo" />
    <string name="upcoming_duties">Upcoming Duties</string>
    <string name="monday">Monday</string>
    <string name="date_10_10_2024">Date: 10/10/2024</string>
    <string name="time_10_30_12_00">Time: 10:30 - 12:00</string>
    <string name="assigned_room_ptc_404">Assigned Room: PTC 404</string>
    <string name="assigned_professor_de_vera_angela">Assigned Professor: De Vera Angela</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="dtr">DTR</string>
    <string name="student_profile">Student Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="instructor">De Vera, Angela</string>
    <string name="_03_2324_031051">03-2324-031051</string>
    <string name="dagupan_campus">Dagupan Campus</string>
    <string name="college">College</string>
    <string name="cite">CITE</string>
    <string name="course">Course</string>
    <string name="campus">Campus</string>
    <string name="hk_percentage">HK Percentage</string>
    <string name="bachelor_of_science_information_technology">Bachelor of Science - Information Technology</string>
    <string name="_50_hk_scholarship_90_hours">50% HK Scholarship / 90 hours</string>
    <string name="hk_duty_type">HK Duty Type</string>
    <string name="external_facilitator">External Facilitator</string>


    //string for verification
    <string name="verify_email">Verify your E-mail</string>
    <string name="verify_description">Please enter the 4 digit code sent to your email address</string>
    <string name="EnterCode">Enter your code</string>
    <string name="verify">Verify</string>
    <string name="ResendCode">Resend code</string>
    //string for forgot password
    <string name="forgot_pass">Forgot Password</string>
    <string name="forgot_desc">Please enter your registered phinma e-mail address to receive a verification code</string>
    <string name="Emailadd">Enter Registered Email Address</string>
    <string name="Email">Email Address\n</string>
    <string name="Send">Send</string>
    //string for create new pass
    <string name="new_pass">Create a new password</string>
    <string name="password_description">Your new password must be different from previously used password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="Save">Save</string>
    //string for dtr
    <string name="DTR">DTR</string>
    <string name="calendar_desc">Icon of Calendar</string>
    <string name="annouce_student">What would you like to announce to your students today?</string>
    <string name="todo">TODO</string>
    <string name="dtr_hour">7:00 AM - 12:00 PM</string>
    <string name="dtr_date">25/10/24</string>
    <string name="dtr_hour1">5h 0m</string>
    <string name="todo2">TODO</string>
    <string name="dtr_hour2">1:00 PM - 5:00 PM</string>
    <string name="dtr_date2">25/10/24</string>
    <string name="dtr_hhmm2">4h 0m</string>
    <string name="todo3">TODO</string>
    <string name="dtr_hour3">8:00 AM - 12:00 PM</string>
    <string name="dtr_date3">25/10/24</string>
    <string name="dtr_hhmm3">4h 0m</string>
    <string name="todo4">TODO</string>
    <string name="dtr_hour4">1:00 PM - 5:00 PM</string>
    <string name="dtr_date4">September 29, 2024</string>
    <string name="dtr_hhmm4">4h 0m</string>
    <string name="rendered_duty_hours">Rendered Duty Hours:</string>
    <string name="dtr_summary_dhr">4h 0m</string>
    <string name="dtr_summary_rendered">4h 0m</string>
    <string name="duty_hours_to_render">Duty Hours to Render:</string>
    <string name="rendering_duty_hours">Rendering Duty Hours:</string>
    <string name="RDH_hhmm">4h 0m</string>

    //string for home faculty
    <string name="HiFaculty">Hi, Faculty!</string>
    <string name="_75h">75h</string>
    <string name="total_time">Total Time</string>
    <string name="_15h">15h</string>
    <string name="pending">Remaining</string>
    <string name="AngelaDevera">Angela Devera</string>
    <string name="pending1">Pending</string>
    <string name="_15h1">15h</string>
    <string name="add_entry">Add Entry</string>
    <string name="duties">Duties</string>
    <string name="_75h1">75h</string>
    <string name="ic_time" />

    //string for faculty log students
    <string name="LogDuty">Log the duty hours rendered by your students</string>
    <string name="total_students">Total Students:</string>
    <string name="student_ic" />
    <string name="angela_de_vera">Angela De Vera</string>
    <string name="student">Student</string>
    <string name="_9h_30m">9h 30m</string>
    <string name="JustinKurtMunar">Justin Kurt Munar</string>
    <string name="KrystaOrallo">Krysta Orallo</string>
    <string name="KimPhilip">Kim Philip</string>
    <string name="KurtAguilar">Kurt Aguilar</string>
    <string name="duty_start">Duty Start</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="duty_end">Duty End</string>
    <string name="cancel">Cancel\n</string>
    <string name="save">Save\n</string>
    <string name="ContactInformation">Contact Information</string>
    <string name="instructor_profile">Instructor Profile</string>
    <string name="profile">Profile\n</string>
    <string name="exit">LOG OUT</string>
    <string name="DTR1">DTR</string>
    <string name="orallo_krysta_zrylle_o">Orallo, Krytsa Zrylle O.</string>
    <string name="update_duties">Edit</string>
    <string name="edit_duty">Edit Duty</string>
    <string name="duty_details">Duty Details</string>
    <string name="edit_duty1">Edit Duty</string>
    <string name="take_a_look_at_your_daily_time_records_now">Take a look at your Daily Time Records (DTRs) now!</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_room">Enter Room</string>
    <string name="enter_professor_s_name">Enter Professor\'s Name</string>
    <string name="cancel1">Cancel</string>
    <string name="save1">Save</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="select_task">Select Task</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="duty_date">Duty Date</string>
    <string name="duty_task">Duty Task\n</string>
    <string name="_00_00">00:00</string>
    <string name="_00_001">00:00</string>
    <string name="dtr_task">Announcement</string>
    <string name="dtr_task2">Facilitate Classroom</string>
    <string name="dtr_task3">Records Score</string>

    <!--string for admin homepage -->
    <string name="Hi_Admin">Hi Admin!</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="admin_hk_students">298</string>
    <string name="admin_total_students">Total of HK Students</string>
    <string name="admin_hk_faculty">298</string>
    <string name="admin_total_faculty">Total of Faculties</string>
    <string name="admin_users">Users</string>
    <string name="add_students">Add Students</string>
    <string name="manage_profiles">Manage and update user profiles today!</string>

    <string name="email_address">ange.devera.up@phinamed.com</string>
    <string name="edit_icon" />
    <string name="delete_icon" />
    <string name="ic_add">Add new item</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel2">CANCEL</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="add_student">Add Student</string>
    <string name="enter_email">Enter Email</string>
    <string name="user_role">User Role:</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="assigned_to">Assigned to:</string>
    <string name="email">Email:</string>
    <string name="first_name">First Name:</string>
    <string name="hk_duty_type_if_student">HK Duty Type (if student):</string>
    <string name="last_name">Last Name:</string>
    <string name="add_professor">Add Professor</string>
    <string name="total_professor">Total Professor:</string>
    <string name="full_name">Full Name:</string>
    <string name="enter_full_name">Enter Fullname</string>
    <string name="department">Department:</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter New Password</string>
    <string name="enter_newpassword">Enter New Password</string>
    <string name="krystaorallo_phinmaed_com">krystaorallo@phinmaed.com</string>
    <string name="year">Year</string>
    <string name="Y2S1">Y2S1</string>
    <string name="ange_devera_up_phinmaed_com">ange.devera.up@phinmaed.com</string>
    <string name="CITE">CITE\n</string>
    <string name="student_ic2" />
    <string name="student_ic5">\n</string>
    <string name="student_ic3" />
    <string name="student_ic4" />
    <string name="assigned_room">Assigned Room</string>
</resources>