<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StudentProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgprofile"
    android:padding="16dp"
    tools:context=".StudentProfile">



    <!-- Information Section -->

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="235dp"
        android:layout_height="118dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goBackToHomepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:onClick="goBackToHomepage"
        android:text="@string/student_profile"
        android:textColor="#172815"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="381dp"
        android:layout_height="154dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBackToHomepage">

        <!-- Profile Image -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/account_profile"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/account_profile" />

        <!-- Name and ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/orallo_krysta_zrylle_o"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/_03_2324_031051"
            android:textColor="#000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <!-- Campus -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <!-- Campus Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/campus"
                android:textColor="#28731C"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Campus Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/dagupan_campus"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- College -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!-- College Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/college"
                android:textColor="#28731C"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- College Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/cite"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- Course -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!-- Course Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/course"
                android:textColor="#28731C"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Course Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/bachelor_of_science_information_technology"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- HK Percentage -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!-- HK Percentage Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/hk_percentage"
                android:textColor="#28731C"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- HK Percentage Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/_50_hk_scholarship_90_hours"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- HK Duty Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!-- HK Duty Type Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/hk_duty_type"
                android:textColor="#28731C"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- HK Duty Type Value -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/external_facilitator"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/exitButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/poppinsbold"
        android:onClick="exitApp"
        android:text="@string/exit"
        android:textColor="#C1DBB8"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>