<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Facultylog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1DBB8"
    tools:context=".FacultyLog">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="235dp"
        android:layout_height="118dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backtologstudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/AngelaDevera"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:minHeight="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="goBackToFacultyLogStudent"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <LinearLayout
        android:id="@+id/summaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backtologstudent">

        <!-- Completed Hours -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/summary_box_bg2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- Icon and Hours in Horizontal Layout -->
            <TextView
                android:id="@+id/completedHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/_75h1"
                android:textColor="#384D35"
                android:textSize="36sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_time" />

            <!-- Completed Label Text -->
            <TextView
                android:id="@+id/completedLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/total_time"
                android:textColor="#384D35"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>
        </LinearLayout>

        <!-- Pending Hours -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/summary_box_bg2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- Icon and Hours in Horizontal Layout -->
            <TextView
                android:id="@+id/pendingHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/_15h1"
                android:textColor="#384D35"
                android:textSize="36sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_time" />
            <!-- Pending Label Text -->
            <TextView
                android:id="@+id/pendingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pending1"
                android:textColor="#384D35"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>
        </LinearLayout>
    </LinearLayout>

    <!-- List of Duty Hours -->

    <TextView
        android:id="@+id/upcomingDutiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/duties"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryLayout" />

    <LinearLayout
        android:id="@+id/dtrDetailsLayout"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/dtr_bg"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingDutiesTitle">

        <!-- Record Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">
            <!--calendar icon -->

            <ImageView
                android:id="@+id/calendarIcon1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/calendar1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/dtr_hour"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dateText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dtr_date"
                    android:textColor="#000000"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/dateTask1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dtr_task"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/totalHours1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/dtr_hour1"
                android:textColor="#172815"
                android:textSize="18sp" />
        </LinearLayout>

        <!--Second Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/calendarIcon2"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/calendar1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/dtr_hour2"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dateText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dtr_date2"
                    android:textColor="#000000"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/dateTask2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dtr_task2"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/totalHours2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/dtr_hhmm2"
                android:textColor="#172815"
                android:textSize="18sp" />
        </LinearLayout>
        <!--Third Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/calendarIcon3"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/todo3"
                android:src="@drawable/calendar1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/dtr_hour3"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dateText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dtr_date3"
                    android:textColor="#000000"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/dateTask3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dtr_task3"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/totalHours3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/dtr_hhmm3"
                android:textColor="#172815"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_entry_btn"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#8EC885"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/add_entry"
        android:textColor="#172815"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtrDetailsLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
